# pyadvcourse_VetAna

./: LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/pyadvcourse_VetAna/: __init__.py  algos.py  new_algos.py
tests/: test_pyadvcourse_VetAna.py
