# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pyadvcourse_VetAna"
description = "learn packaging at the python advanced course"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "vetana.stojilj@gmail.com", name = "Ana Stojiljkovic" },
]
dynamic = ["version"]
dependencies = []

[tool.hatch.version]
path = "src/pyadvcourse_VetAna/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/StojiljkovicVetAna/pyadvcourse_VetAna"
repository = "https://github.com/StojiljkovicVetAna/pyadvcourse_VetAna"
